--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,457 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  background: #E5E5E5;
+}
+
+.body-wrapper {
+  max-width: 1440px;
+  margin: 2vh auto;
+  background: #F2EFE9;
+  -webkit-box-shadow: 0px 8px 20px rgba(72, 51, 10, 0.3);
+          box-shadow: 0px 8px 20px rgba(72, 51, 10, 0.3);
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header .logo {
+  margin-top: 193px;
+  margin-left: 180px;
+}
+
+header .header-text {
+  background-image: url(../imgs/02Vector.svg);
+  background-position: right;
+  background-repeat: no-repeat;
+}
+
+header .header-text .lang {
+  margin-top: 61px;
+  margin-right: 172px;
+  float: right;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 37px;
+  color: #F2EFE9;
+}
+
+header .header-text .title {
+  margin-right: 266px;
+  margin-top: 286px;
+  text-align: center;
+}
+
+header .header-text h1 {
+  margin-right: 40px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 34px;
+  line-height: 44px;
+  text-align: right;
+  color: #C69E6B;
+}
+
+header .header-text .light {
+  color: #F2EFE9;
+}
+
+header .header-text .dark {
+  color: #4F453A;
+  font-size: 40px;
+}
+
+header .header-text a {
+  margin-left: 50px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration: none;
+  color: #F2EFE9;
+  padding: 16px 55px;
+  background: #C69E6B;
+  border-radius: 45px;
+  border: none;
+}
+
+#about_us {
+  margin-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-image: url(../imgs/11Vector.svg);
+  background-repeat: no-repeat;
+  background-position: left top;
+}
+
+.about_us__images {
+  margin-top: 170px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.about_us__images img:first-child {
+  margin-bottom: 150px;
+}
+
+.about_us__images img:last-child {
+  margin-top: 150px;
+  margin-left: -80px;
+}
+
+.about-us_text {
+  margin-right: 150px;
+  margin-top: 100px;
+  margin-left: -140px;
+  width: 677px;
+}
+
+.about-us_text h1 {
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 117px;
+  color: #C69E6B;
+}
+
+.about-us_text .about-us_paragraphs {
+  margin-top: 122px;
+  padding-left: 150px;
+}
+
+.about-us_text .about-us_paragraphs p {
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 34px;
+  color: #4F453A;
+}
+
+.about-us_text .about-us_paragraphs p .mary {
+  color: #C69E6B;
+  font-weight: bold;
+}
+
+.span2 {
+  color: #716237;
+  font-weight: bold;
+}
+
+.eco-goal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-image: url(../imgs/31Vector.svg);
+  background-repeat: no-repeat;
+  background-position: right top;
+}
+
+.eco-goal__block1 h1 {
+  margin-top: 70px;
+  margin-left: 93px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 144px;
+  line-height: 176px;
+  color: #BFB48F;
+}
+
+.eco-goal__block1 p {
+  margin-top: 253px;
+  margin-left: 81px;
+  width: 665px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 38px;
+  text-align: center;
+  color: #4F453A;
+}
+
+.eco-goal__block2 p {
+  margin-right: 60px;
+  margin-top: 240px;
+  width: 572px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 34px;
+  color: #F2EFE9;
+}
+
+.eco-goal__block2 img {
+  margin-left: 11vw;
+}
+
+#style {
+  background-image: url(../imgs/41Vector.svg);
+  background-repeat: no-repeat;
+  background-position-x: 20%;
+  background-position-y: 40%;
+}
+
+.style-wrapper1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.style-text h1 {
+  margin: 0;
+  margin-right: 93px;
+  text-align: right;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 144px;
+  line-height: 176px;
+  color: #DAC6AE;
+}
+
+.style-text p {
+  margin-top: 185px;
+  margin-right: 30%;
+  margin-left: 17px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 34px;
+  color: #4F453A;
+}
+
+.style-wrapper2 {
+  text-align: center;
+}
+
+#contacts {
+  background-image: url(../imgs/51Vector.svg);
+  background-repeat: no-repeat;
+  background-position: right top;
+  margin-top: -100px;
+}
+
+#contacts h1 {
+  margin: 0;
+  padding-top: 166px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 144px;
+  line-height: 176px;
+  color: #716237;
+  opacity: 0.5;
+}
+
+.contacts-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts-wrapper h3 {
+  margin-left: 30px;
+  margin-top: 54px;
+  font-family: "Montserrat Alternates";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 59px;
+  color: #606060;
+}
+
+.contacts-wrapper h3 span {
+  color: #F2EFE9;
+}
+
+.contacts-wrapper h3 p {
+  color: #716237;
+  margin: 0;
+}
+
+.contacts-wrapper a {
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration: none;
+  color: #F2EFE9;
+  padding: 16px 55px;
+  background: #C69E6B;
+  border-radius: 45px;
+  border: none;
+}
+
+.contacts-wrapper h4 {
+  margin-top: 74px;
+  margin-bottom: 0;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 37px;
+  color: #BFB48F;
+}
+
+form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(../imgs/6Vector.svg);
+  background-repeat: no-repeat;
+  background-position: left top;
+}
+
+form input {
+  margin-bottom: 26px;
+  width: 657px;
+  height: 50px;
+  background: #F6F3ED;
+  border: 1px solid #DAC6AE;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 45px;
+}
+
+form input:first-child {
+  margin-top: 50px;
+}
+
+form textarea {
+  margin-bottom: 26px;
+  background: #F6F3ED;
+  border: 1px solid #DAC6AE;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 45px;
+}
+
+form input, form textarea::-webkit-input-placeholder {
+  padding-top: 14px;
+  padding-left: 30px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #C69E6B;
+}
+
+form input, form textarea:-ms-input-placeholder {
+  padding-top: 14px;
+  padding-left: 30px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #C69E6B;
+}
+
+form input, form textarea::-ms-input-placeholder {
+  padding-top: 14px;
+  padding-left: 30px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #C69E6B;
+}
+
+form input, form textarea::placeholder {
+  padding-top: 14px;
+  padding-left: 30px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #C69E6B;
+}
+
+form button {
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration: none;
+  color: #F2EFE9;
+  padding: 16px 55px;
+  background: #C69E6B;
+  border-radius: 45px;
+  border: none;
+  margin-bottom: 130px;
+}
+
+form footer {
+  margin-bottom: 27px;
+  font-family: Montserrat Alternates;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #DAC6AE;
+  opacity: 0.7;
+}
+/*# sourceMappingURL=style.css.map */
