--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,14 +15,15 @@ header{
    display: flex;
    flex-direction: row; 
    justify-content: space-between;
+   background-image: url(../imgs/02Vector.svg);
+    background-position: right;
+    background-repeat: no-repeat;
    .logo{
        margin-top: 193px;
        margin-left: 180px;
    }
    .header-text{
-       background-image: url(../imgs/02Vector.svg);
-       background-position: right;
-       background-repeat: no-repeat;
+       
        .lang{
         margin-top: 61px;
         margin-right: 172px;
@@ -79,10 +80,12 @@ header{
     flex-direction: row;  
     & img:first-child{
         margin-bottom: 150px;
+        max-height: 677px;
     }
     & img:last-child{
         margin-top: 150px;
         margin-left: -80px;
+        max-height: 677px;
     }
 }
 .about-us_text{
@@ -124,13 +127,14 @@ header{
 
 .eco-goal{
   display: flex;
-  flex-direction: row; 
+  flex-direction: column; 
   background-image: url(../imgs/31Vector.svg); 
   background-repeat: no-repeat;
   background-position: right top;
 }
 .eco-goal__block1{
-
+display: flex;
+flex-direction: row;
     h1{
         margin-top: 70px;
         margin-left: 93px;
@@ -142,7 +146,24 @@ header{
         color: #BFB48F;
     }
     p{
-        margin-top: 253px;
+        margin-right: 60px;
+        margin-top: 240px;
+        width: 572px;
+        font-family: Montserrat Alternates;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 28px;
+        line-height: 34px;
+        color: #F2EFE9;  
+    }
+}
+
+.eco-goal__block2{
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-between; 
+    p{
+       margin-top: 253px;
         margin-left: 81px;
         width: 665px;
         font-family: Montserrat;
@@ -152,21 +173,6 @@ header{
         line-height: 38px;
         text-align: center;
         color: #4F453A;
-    }
-}
-
-.eco-goal__block2{
-        
-    p{
-        margin-right: 60px;
-        margin-top: 240px;
-        width: 572px;
-        font-family: Montserrat Alternates;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 28px;
-        line-height: 34px;
-        color: #F2EFE9;
     }
     img{
         margin-left: 11vw;
