--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ header .header-text .lang {
   font-size: 30px;
   line-height: 37px;
   color: #F2EFE9;
+  cursor: pointer;
 }
 
 header .header-text .title {
