--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,7 @@ header{
            font-size: 30px;
            line-height: 37px;
            color: #F2EFE9;
+           cursor: pointer;
        }
        .title{
        margin-right: 266px;
